@@ -5597,7 +5597,7 @@ of each directory in $FORTRANPATH.
 Directory location where the Fortran compiler should place
 any module files it generates.  This variable is empty, by default. Some 
 Fortran compilers will internally append this directory in the search path 
-for module files, as well
+for module files, as well.
 
 .IP FORTRANMODDIRPREFIX
 The prefix used to specify a module directory on the Fortran compiler command
@@ -5613,7 +5613,7 @@ This will be appended to the beginning of the directory
 in the $FORTRANMODDIR construction variables
 when the $_FORTRANMODFLAG variables is automatically generated.
 
-.IP FORTRANMODFLAG
+.IP _FORTRANMODFLAG
 An automatically-generated construction variable
 containing the Fortran compiler command-line option
 for specifying the directory location where the Fortran
